public/stylesheets/app.css
/* ... */
.signature {
	width: 150px;
	height: 150px;
	margin: 1em;
}

/* 	////////////////////////////////////////////
	MAIN - main body content organization in grid
	////////////////////////////////////////////	*/

.grid {
	position: absolute;
	top: 50px;
	width: 100%;
	min-height: 100%;
}

.main {
	grid-area: main;
	min-height: 100%;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: auto;
}

.section-header {
	width: 175px;
	margin: 0 auto 1.25em auto;
}

#projects, #resume, #about, #reviews {
	margin-top: 75px;
	grid-column: 1 / span 3;
}

#resume, #about, #reviews {
	max-width: 1600px;
	margin: 75px auto 0 auto;
}

.btn-normal {
	color: #dbc5c5;
	margin: 0.5em 0.5em;
	padding: 0.5em;
	text-decoration: none;
	border: 1px solid #dbc5c5;
}

.btn-normal p {
	margin: 0 5px;
}

.btn-normal:hover {
    color: white;
    border-color: white;
}

.btn-normal:active {
    color: #ad9c9c;
    border-color: #ad9c9c;
    background-color: #6d1110;
}

/* 	////////////////////////////////////////////
	PROJECTS SECTION - 1 main project, 2 - 3 sub projects
	////////////////////////////////////////////	*/ 

.proj-main {
	height: 600px;
}

.proj-sub {
	height: 400px;
	align-content: center;
	padding: 1.5em;
	min-width: 290px;
}

.section-card {
	grid-column: 1 / span 3;
	margin: 0 auto;
	border-radius: 20px;
	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.35);
	width: 90%;
	max-width: 1400px;
	overflow: hidden;
}

/* 	////////////////////////////////////////////
	RESUME SECTIONS - languages/software/education & companies
	////////////////////////////////////////////	*/ 

#lang-soft-edu {
	padding: 0 7% 75px 7%;
	background-color: #e5e0e0;
	background-image: url(/images/jesus-kiteque-224069-unsplash.png);
	background-position: 50% 80%;
	background-repeat: no-repeat;
	background-size: cover;
}

#lang-soft-edu h4,{
	color: white;
	margin-top: 1.5em;
}

.icon-circle {
	display: inline-block;
	border-radius: 50%;
	padding: 2.5em;
	background-color: white;
	margin: 75px auto 0 auto;
}

.icon-circle i {
	color: #ceb6b6;
	font-size: 2em;
}

.company-logo-wrap {
	border-radius: 50%;
	display: inline;
	background-color: white;
	margin: 0 auto;
	overflow: hidden;
}

.company-logo-double {
	justify-content: space-around;
}

.company-logo-double i {
	font-size: 2.5em;
	align-self: center;
}

.company-logo {
	width: 100px;
	height: 100px;
}

.company {
	justify-content: space-between;
	background-color: #c8aaaa;
	box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.5);
}

.company-section {
	padding: 2em;
	margin: 0;
	justify-content: center;
}

.company-title-section {
	max-width: 200px;
}

.company-img {
	background-color: #a97e7e;
	min-width: 225px;
}

.company-proj {
	min-width: 225px;
	min-height: 225px;
}

.store-badge {
	width: 125px;
	height: auto;
	padding: 0 4px;
}

.store-badge-wrap {
	justify-content: center;
	margin: 10px 0;
}

.btn-badge {
	color: white;
	background-color: black;
	border-radius: 10px;
	border: 1px solid lightgrey;
	padding: 0.2em 0.5em;
	text-decoration: none;
}

.btn-badge-first-p {
	font-size: 0.55em;
}

.btn-badge i {
	font-size: 1.25em;
	display: inline;
}

.btn-badge p {
	margin: 0 0 0 0.5em;
	align-self: center;
}

.banner-red {
	color: #dbc5c5;
	display: flex;
	align-content: center;
	justify-content: center;
	min-height: 50px;
	text-align: center;
	border-top: 1px solid rgba(0, 0, 0, 0.25);
	background-color: #8c1919;
}

.banner-red h4 {
	color: white;
	margin: 1.25em;
}

.banner-red span {
	margin-left: 10px;
}

.banner-red a {
	color: white;
	text-decoration: none;
}

.banner-red a:hover {
	color: black;
}

.border-bottom {
	border-top: none;
	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
}

/* 	////////////////////////////////////////////
	ABOUT SECTION - info about and image of me		  
	////////////////////////////////////////////	*/

.artist-img {
	display: block;
	max-width: 375px;
	max-height: 375px;
	width: auto;
	height: auto;
}

/* 	////////////////////////////////////////////
	CHIPS - small bits of information with a tag
	i.e. software or languages I know 		  
	////////////////////////////////////////////	*/

.chip {
	display: flex;
	font-size: 0.9em;
	border-radius: 7px;
	border: 1px solid rgba(255, 255, 255, 0.75);
	margin: 0.3em;
	align-items: stretch;
}

.chip-body {
	color: white;
	padding: 0.4em;
	width: auto;
}

.chip-tag {
	color: #ceb6b6;
	background-color: white;
	border-top-left-radius: 6px;
	border-bottom-left-radius: 6px;
	padding: 0.4em;
	width: auto;
}

.chip-wrap {
	justify-content: center;
}

/* 	////////////////////////////////////////////
	IMG CLASSES - for projects and Companies
	////////////////////////////////////////////	*/

.bg-cover {
	background-size: cover;
	background-position: center;
}	

.bg-proj-small {
	background-position: center;
}

/* main projects */
.bg-wildtangent-casino {
	background-image: url("/images/ProjectHeaders/proj_main_wild-tangent.png");
}

.bg-spellslingers {
	background-image: url("/images/ProjectHeaders/proj_main_spell-slingers.png");
}

.bg-stellarfortune {
	background-image: url("/images/ProjectHeaders/proj_main_stellar-fortune.png");
}

/* companies */
.bg-freelance {
	background-image: url(/images/CompanyHeaders/sylvia-yang-409493-unsplash.png);
}

.bg-cake-golem {
	background-image: url(/images/CompanyHeaders/sergee-bee-7017-unsplash.png);
}

.bg-wildtangent {
	background-image: url(/images/CompanyHeaders/sergee-bee-6680-unsplash.png);
}

.bg-g3 {
	background-image: url(/images/CompanyHeaders/global_gaming_group.png);
}

.bg-spin-for-good {
	background-image: url(/images/CompanyHeaders/daniil-vnoutchkov-397278-unsplash.png);
}

.bg-sunstorm {
	background-image: url(/images/CompanyHeaders/sunstorm_games.png);
}

/* company projects */
.bg-proj-freelance {
	background-image: url(/images/ProjectHeaders/proj_freelance.png);
}

.bg-proj-spellslingers {
	background-image: url(/images/ProjectHeaders/proj_spell-slingers.png);
}
/* ... */

